fix: JSA 상세보기 페이지 추가 및 작업허가서 인쇄 시 보충작업허가서 포함
- JSA 위험성평가 목록에서 상세보기 404 오류 수정
- 작업허가서 인쇄 시 보충작업허가서도 함께 출력되도록 개선
- MCP 설정 파일 스키마 오류 수정

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "geist": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "mcp-supabase": "^0.1.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
